--- a/src/CazaTalentos/a_cazatalentos.ipynb
+++ b/src/CazaTalentos/a_cazatalentos.ipynb
@@ -5,10 +5,6 @@
     "colab": {
       "provenance": [],
       "name": "a_cazatalentos.ipynb",
-      "collapsed_sections": [
-        "5NHQWdqh3Sro",
-        "q2mpBZS53jCQ"
-      ],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -992,22 +988,197 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 141
         },
         "id": "gmfwQDb-peIm",
-        "outputId": "aa7bbef4-9cec-47c1-c5d9-0c13c22f2b01"
+        "outputId": "af9b1481-fc92-4b93-e1e8-31c078091b96"
       },
-      "execution_count": null,
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "LoadError",
+          "evalue": "UndefVarError: `ftirar` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+          "traceback": [
+            "UndefVarError: `ftirar` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+            "",
+            "Stacktrace:",
+            " [1] top-level scope",
+            "\u001b[90m   @\u001b[39m \u001b[90m./\u001b[39m\u001b[90m\u001b[4mIn[12]:37\u001b[24m\u001b[39m"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Vamos a comparar la ganadora de cada método entre si, tirando 100 veces.\n",
+        "\n",
+        "using Statistics\n",
+        "\n",
+        "ftirar = (prob, q) -> (sum(rand(q) .< prob)/ q)\n",
+        "\n",
+        "\n",
+        "# asumimos rate de elegida\n",
+        "elegida = 0.8\n",
+        "\n",
+        "# los pelotones estuvieron cerca, asumimos rates cercanos.\n",
+        "peloton_1 = .701:.001:0.799\n",
+        "peloton_2 = .700:.0005:0.799\n",
+        "\n",
+        "# descomentar para comparar con peores jugadoras\n",
+        "#peloton_1 = .601:.002:0.799\n",
+        "#peloton_2 = .600:.001:0.799\n",
+        "\n",
+        "# para el caso 4, la otra jugadora tuvo .75\n",
+        "peloton_4 = .75\n",
+        "\n",
+        "\n",
+        "# hacemos un vector con todas las jugadoras\n",
+        "jugadoras_1 = vcat(peloton_1, elegida)\n",
+        "# aqui aprovechamos que el peloton 1 tiene 99 y el peloton 100, para asi sumar 200 con la elegida.\n",
+        "jugadoras_2 = vcat(peloton_2, elegida)\n",
+        "jugadoras_4 = vcat(peloton_4, elegida)\n",
+        "\n",
+        "cazatalentos = Dict(\n",
+        "  1 => [jugadoras_1],\n",
+        "  2 => [jugadoras_2],\n",
+        "  4 => [jugadoras_4]\n",
+        ")\n",
+        "\n",
+        "# aqui vamos a guardar las ganadoras en cada experimento.\n",
+        "elegidas = Dict(\n",
+        "  1 => 0,\n",
+        "  2 => 0,\n",
+        "  3 => 0.8, # sin sesgo\n",
+        "  4 => 0,\n",
+        "  5 => 0.701 # media de sus tiros\n",
+        ")\n",
+        "\n",
+        "# diccionario para guardar los resultados de un hipotetico matchup\n",
+        "wins_against = Dict(\n",
+        "  5 => Dict(4=>0, 3=>0, 2=>0, 1=>0),\n",
+        "  4 => Dict(3=>0, 2=>0, 1=>0),\n",
+        "  3 => Dict(2=>0, 1=>0),\n",
+        "  2 => Dict(1=>0),\n",
+        "\n",
+        ")\n",
+        "\n",
+        "function comparar_elegidas(elegidas, wins_against)\n",
+        "  # iteramos a traves de las ganadoras\n",
+        "  for elegida in (elegidas)\n",
+        "    for elegida_2 in (elegidas)\n",
+        "      # salteamos comparaciones ya hechas o con la elegida misma\n",
+        "      if elegida[1] <= elegida_2[1] continue end\n",
+        "      # comparamos el resultado de 100 tiros\n",
+        "      if ftirar(elegida[2], 100) > ftirar(elegida_2[2],100)\n",
+        "        # sumamos un win de la elegida frente al matchup\n",
+        "        wins_against[elegida[1]][elegida_2[1]] += 1\n",
+        "      end\n",
+        "    end\n",
+        "  end\n",
+        "end\n",
+        "\n",
+        "n_experimentos = 10000\n",
+        "\n",
+        "# simulamos 10000 selecciones\n",
+        "for i = 1:n_experimentos\n",
+        "  for caza in cazatalentos\n",
+        "    vaciertos  = ftirar.(caza[2][1], 100)  # cada jugadora tira 100 tiros libres\n",
+        "    _, mejor_index  = findmax(vaciertos) # Obtenemos el indice de la mejor jugadora\n",
+        "\n",
+        "    elegidas[caza[1]] = caza[2][1][mejor_index] # asignamos ese rate al grupo de ganadoras para este cazatalentos\n",
+        "\n",
+        "  end\n",
+        "\n",
+        "  # en cada iteración comparamos las 5 elegidas\n",
+        "  comparar_elegidas(elegidas, wins_against)\n",
+        "end\n",
+        "\n",
+        "\n",
+        "# Diccionario para ver cuántos matchups gana cada elegida\n",
+        "final_scores = Dict(\n",
+        "  1=>0,\n",
+        "  2=>0,\n",
+        "  3=>0,\n",
+        "  4=>0,\n",
+        "  5=>0,\n",
+        ")\n",
+        "\n",
+        "# cada key de wins_against es una elegida\n",
+        "for elegida in wins_against\n",
+        "  # cada valor de la elegida es el matchup con las restantes\n",
+        "  for matchup in elegida[2]\n",
+        "    # dividimos por la cantidad de experimentos para obtener el win rate.\n",
+        "    # matchup[1] es el # de elegida, matchup[2] la cantidad de wins\n",
+        "    if matchup[2] / n_experimentos < 0.5\n",
+        "      # aqui la elegida perdió mas del 50%, por lo que sumamos un score al matchup\n",
+        "      final_scores[matchup[1]] += 1\n",
+        "    else\n",
+        "      # aqui ganó más la elegida\n",
+        "      final_scores[elegida[1]] += 1\n",
+        "    end\n",
+        "  end\n",
+        "end\n",
+        "\n",
+        "# ordenamos en base a los resultados\n",
+        "elegidas_ordenadas = sort(collect(final_scores), by = x -> x.second)\n",
+        "for elegida in elegidas_ordenadas\n",
+        "  print(\"C$(elegida[1]) < \")\n",
+        "end"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Z0_BhG0s4yG9",
+        "outputId": "ff65f1bd-7804-4c05-d083-2eba484b8dd3"
+      },
+      "execution_count": 129,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Cazatalentos #4\tGana elegida: 77.92%\tDiferencias: 0.0171\n",
-            "Cazatalentos #2\tGana elegida: 2.23%\tDiferencias: 0.0981\n",
-            "Cazatalentos #1\tGana elegida: 3.98%\tDiferencias: 0.0895\n",
-            "Chances de que la elegida por la cazatalentos 5 tire 80/100: 1.6%"
+            "C5 < C2 < C1 < C4 < C3 < "
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "LSg-yrP6Inpx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ftirar = (prob, q) -> (sum(rand(q) .< prob)/ q)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dh4Z4vtU7Xl5",
+        "outputId": "baacddfb-ae57-4ad0-81d4-d35d5d95a369"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "comparar_ganadoras (generic function with 3 methods)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
         }
       ]
     },
@@ -1022,13 +1193,13 @@
         "\n",
         "En estos casos, si repetimos el experimento de tirar 100 tiros muchas veces (> 10000 veces), observo que para un peloton de similares caracteristicas, el cazatalentos 1 elije la jugadora con ratio 0.8 casi el doble de veces que el cazatalentos 2. De aqui consideramos que C2 < C1.\n",
         "\n",
-        "Para el cazatalentos 3, al tener solo 2 tiradoras, el efecto observado para los cazatalentos 1 y 2 no es tan fuerte. Es decir, es menos probable que se haya elegido a una tiradora cuyo rate no sea 0.8. Consideramos C2 < C1 < C3.\n",
+        "Para el cazatalentos 4, al tener solo 2 tiradoras, el efecto observado para los cazatalentos 1 y 2 no es tan fuerte. Es decir, es menos probable que se haya elegido a una tiradora cuyo rate no sea 0.8. Consideramos C2 < C1 < C4.\n",
         "\n",
-        "Siguiendo este analisis, para el cazatalentos #4 solo disponemos del dato de la unica tiradora, que demostro un promedio de 0.8. No aplica 'la maldicion de la ganadora' ni tenemos datos que indiquen que su verdadero promedio no sea 0.8. Considero entonces C2 < C1 < C3 < C4.\n",
+        "Siguiendo este analisis, para el cazatalentos #3 solo disponemos del dato de la unica tiradora, que demostro un promedio de 0.8. No aplica 'la maldicion de la ganadora' ni tenemos datos que indiquen que su verdadero promedio no sea 0.8. Considero entonces C2 < C1 < C4 < C3.\n",
         "\n",
         "Finalmente, para el cazatalentos 5 solo se observan 10 tiradas de la misma jugadora, por lo que podemos considerar la media de los disparos como su valor esperado, 70.1. Corremos experimentos para ver que posibilidad hay que tire 80/100 con ese promedio, y el resultado es aproximadamente 1.6%.\n",
         "\n",
-        "Como conclusion, considero C5 < C2 < C1 < C3 < C4.\n"
+        "Como conclusion, considero C5 < C2 < C1 < C4 < C3.\n"
       ],
       "metadata": {
         "id": "y1aa5SRQpfcp"
