--- a/src/CazaTalentos/a_cazatalentos.ipynb
+++ b/src/CazaTalentos/a_cazatalentos.ipynb
@@ -416,6 +416,7 @@
     {
       "cell_type": "code",
       "source": [
+        "using Random\n",
         "Random.seed!()\n",
         "jugadoras  = repeat([0.7], 100 )\n",
         "\n",
@@ -435,33 +436,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "541762c3-850c-48c3-e6b0-e9796fdf85c5"
+        "outputId": "20f2f185-dafe-4f32-b5ef-db2eeb2b4f93"
       },
-      "execution_count": null,
+      "execution_count": 242,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.82\t\t\t0.8\n",
-            "\n",
-            "0.8\t\t\t0.6\n",
-            "\n",
-            "0.83\t\t\t0.8\n",
-            "\n",
-            "0.8\t\t\t0.6\n",
-            "\n",
-            "0.78\t\t\t0.6\n",
-            "\n",
-            "0.82\t\t\t0.6\n",
+            "0.79\t\t\t0.7\n",
             "\n",
             "0.79\t\t\t0.7\n",
             "\n",
-            "0.82\t\t\t0.5\n",
+            "0.84\t\t\t0.6\n",
             "\n",
-            "0.81\t\t\t0.6\n",
+            "0.81\t\t\t0.8\n",
             "\n",
-            "0.81\t\t\t0.9\n",
+            "0.8\t\t\t0.8\n",
+            "\n",
+            "0.8\t\t\t0.8\n",
+            "\n",
+            "0.82\t\t\t0.7\n",
+            "\n",
+            "0.8\t\t\t0.7\n",
+            "\n",
+            "0.84\t\t\t0.7\n",
+            "\n",
+            "0.8\t\t\t0.5\n",
             "\n"
           ]
         }
@@ -994,7 +995,7 @@
         "id": "gmfwQDb-peIm",
         "outputId": "af9b1481-fc92-4b93-e1e8-31c078091b96"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1080,17 +1081,21 @@
         "  end\n",
         "end\n",
         "\n",
-        "n_experimentos = 10000\n",
+        "n_experimentos = 100\n",
         "\n",
         "# simulamos 10000 selecciones\n",
         "for i = 1:n_experimentos\n",
-        "  for caza in cazatalentos\n",
-        "    vaciertos  = ftirar.(caza[2][1], 100)  # cada jugadora tira 100 tiros libres\n",
-        "    _, mejor_index  = findmax(vaciertos) # Obtenemos el indice de la mejor jugadora\n",
+        "  # FORMULA VIEJA\n",
+        "  #for caza in cazatalentos\n",
+        "  #  vaciertos  = ftirar.(caza[2][1], 100)  # cada jugadora tira 100 tiros libres\n",
+        "  #  _, mejor_index  = findmax(vaciertos) # Obtenemos el indice de la mejor jugadora\n",
         "\n",
-        "    elegidas[caza[1]] = caza[2][1][mejor_index] # asignamos ese rate al grupo de ganadoras para este cazatalentos\n",
+        "  #  elegidas[caza[1]] = caza[2][1][mejor_index] # asignamos ese rate al grupo de ganadoras para este cazatalentos\n",
         "\n",
-        "  end\n",
+        "  #end\n",
+        "\n",
+        "  # NUEVA SELECCION\n",
+        "  elegidas[1], elegidas[2], elegidas[4], elegidas[3] = elegir_1_2_4()\n",
         "\n",
         "  # en cada iteración comparamos las 5 elegidas\n",
         "  comparar_elegidas(elegidas, wins_against)\n",
@@ -1133,15 +1138,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z0_BhG0s4yG9",
-        "outputId": "ff65f1bd-7804-4c05-d083-2eba484b8dd3"
+        "outputId": "0010fd2c-6173-4210-b26b-ecd4aa8d3327"
       },
-      "execution_count": 129,
+      "execution_count": 287,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "C5 < C2 < C1 < C4 < C3 < "
+            "C2 < C1 < C5 < C4 < C3 < "
           ]
         }
       ]
@@ -1159,26 +1164,75 @@
       "cell_type": "code",
       "source": [
         "ftirar = (prob, q) -> (sum(rand(q) .< prob)/ q)\n",
-        "\n"
+        "function elegir_1_2_4()\n",
+        "  rates_1 = []\n",
+        "  rates = .5:.01:.8\n",
+        "  min_rate_1 = 1\n",
+        "  for i in rates\n",
+        "    if min_rate_1 < 1 break end\n",
+        "    for _ in 1:100\n",
+        "      score = ftirar(i, 100)\n",
+        "      if score >= .8\n",
+        "          min_rate_1 = i\n",
+        "          break\n",
+        "      end\n",
+        "    end\n",
+        "  end\n",
+        "\n",
+        "  min_rate_2 = 1\n",
+        "  for i in rates\n",
+        "    if min_rate_2 < 1 break end\n",
+        "    for _ in 1:200\n",
+        "      score = ftirar(i, 100)\n",
+        "      if score >= .8\n",
+        "          min_rate_2 = i\n",
+        "          break\n",
+        "      end\n",
+        "    end\n",
+        "  end\n",
+        "\n",
+        "  min_rate_4 = 1\n",
+        "  for i in rates\n",
+        "    if min_rate_4 < 1 break end\n",
+        "    for _ in 1:2\n",
+        "      score = ftirar(i, 100)\n",
+        "      if score >= .8\n",
+        "          min_rate_4 = i\n",
+        "          break\n",
+        "      end\n",
+        "    end\n",
+        "  end\n",
+        "\n",
+        "  min_rate_3 = 1\n",
+        "  for i in rates\n",
+        "    if min_rate_3 < 1 break end\n",
+        "    score = ftirar(i, 100)\n",
+        "    if score >= .8\n",
+        "        min_rate_3 = i\n",
+        "    break\n",
+        "    end\n",
+        "  end\n",
+        "  return (min_rate_1, min_rate_2, min_rate_4, min_rate_3)\n",
+        "end"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "dh4Z4vtU7Xl5",
-        "outputId": "baacddfb-ae57-4ad0-81d4-d35d5d95a369"
+        "outputId": "8ae41357-ae24-47f8-9725-d2c2e65c3b7d"
       },
-      "execution_count": 90,
+      "execution_count": 278,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "comparar_ganadoras (generic function with 3 methods)"
+              "elegir_1_2_4 (generic function with 1 method)"
             ]
           },
           "metadata": {},
-          "execution_count": 90
+          "execution_count": 278
         }
       ]
     },
