Adds log and notifications

--- a/src/workflows/feature_engineering/z950_FE_A01.ipynb
+++ b/src/workflows/feature_engineering/z950_FE_A01.ipynb
@@ -75,7 +75,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "id": "EL8wdHaUs59K",
       "metadata": {
         "id": "EL8wdHaUs59K",
@@ -87,16 +87,16 @@
         {
           "data": {
             "text/html": [
-              "'Sat Aug 09 13:05:39 2025'"
+              "'Sat Aug 09 23:17:18 2025'"
             ],
             "text/latex": [
-              "'Sat Aug 09 13:05:39 2025'"
+              "'Sat Aug 09 23:17:18 2025'"
             ],
             "text/markdown": [
-              "'Sat Aug 09 13:05:39 2025'"
+              "'Sat Aug 09 23:17:18 2025'"
             ],
             "text/plain": [
-              "[1] \"Sat Aug 09 13:05:39 2025\""
+              "[1] \"Sat Aug 09 23:17:18 2025\""
             ]
           },
           "metadata": {},
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 75,
       "id": "1iE0U4_WCPRT",
       "metadata": {
         "id": "1iE0U4_WCPRT",
@@ -127,8 +127,8 @@
               "\t<tr><th></th><th scope=col>used</th><th scope=col>(Mb)</th><th scope=col>gc trigger</th><th scope=col>(Mb)</th><th scope=col>limit (Mb)</th><th scope=col>max used</th><th scope=col>(Mb)</th></tr>\n",
               "</thead>\n",
               "<tbody>\n",
-              "\t<tr><th scope=row>Ncells</th><td> 721558</td><td>38.6</td><td>1462382</td><td>78.1</td><td>   NA</td><td>1462382</td><td>78.1</td></tr>\n",
-              "\t<tr><th scope=row>Vcells</th><td>1348807</td><td>10.3</td><td>8388608</td><td>64.0</td><td>18432</td><td>2172397</td><td>16.6</td></tr>\n",
+              "\t<tr><th scope=row>Ncells</th><td> 789322</td><td>42.2</td><td>1462380</td><td>78.1</td><td>   NA</td><td>1462380</td><td>78.1</td></tr>\n",
+              "\t<tr><th scope=row>Vcells</th><td>1507056</td><td>11.5</td><td>8388608</td><td>64.0</td><td>18432</td><td>3499292</td><td>26.7</td></tr>\n",
               "</tbody>\n",
               "</table>\n"
             ],
@@ -137,8 +137,8 @@
               "\\begin{tabular}{r|lllllll}\n",
               "  & used & (Mb) & gc trigger & (Mb) & limit (Mb) & max used & (Mb)\\\\\n",
               "\\hline\n",
-              "\tNcells &  721558 & 38.6 & 1462382 & 78.1 &    NA & 1462382 & 78.1\\\\\n",
-              "\tVcells & 1348807 & 10.3 & 8388608 & 64.0 & 18432 & 2172397 & 16.6\\\\\n",
+              "\tNcells &  789322 & 42.2 & 1462380 & 78.1 &    NA & 1462380 & 78.1\\\\\n",
+              "\tVcells & 1507056 & 11.5 & 8388608 & 64.0 & 18432 & 3499292 & 26.7\\\\\n",
               "\\end{tabular}\n"
             ],
             "text/markdown": [
@@ -147,14 +147,14 @@
               "\n",
               "| <!--/--> | used | (Mb) | gc trigger | (Mb) | limit (Mb) | max used | (Mb) |\n",
               "|---|---|---|---|---|---|---|---|\n",
-              "| Ncells |  721558 | 38.6 | 1462382 | 78.1 |    NA | 1462382 | 78.1 |\n",
-              "| Vcells | 1348807 | 10.3 | 8388608 | 64.0 | 18432 | 2172397 | 16.6 |\n",
+              "| Ncells |  789322 | 42.2 | 1462380 | 78.1 |    NA | 1462380 | 78.1 |\n",
+              "| Vcells | 1507056 | 11.5 | 8388608 | 64.0 | 18432 | 3499292 | 26.7 |\n",
               "\n"
             ],
             "text/plain": [
               "       used    (Mb) gc trigger (Mb) limit (Mb) max used (Mb)\n",
-              "Ncells  721558 38.6 1462382    78.1    NA      1462382  78.1\n",
-              "Vcells 1348807 10.3 8388608    64.0 18432      2172397  16.6"
+              "Ncells  789322 42.2 1462380    78.1    NA      1462380  78.1\n",
+              "Vcells 1507056 11.5 8388608    64.0 18432      3499292  26.7"
             ]
           },
           "metadata": {},
@@ -169,7 +169,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 76,
+      "id": "ca8ddae1",
+      "metadata": {
+        "vscode": {
+          "languageId": "r"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "remove_type <- function(type) {\n",
+        "  # Get all objects in the global environment\n",
+        "  all_objects <- ls(envir = .GlobalEnv)\n",
+        "  \n",
+        "  # Identify objects of the specified type\n",
+        "  to_remove <- sapply(all_objects, function(x) {\n",
+        "    inherits(get(x, envir = .GlobalEnv), type)\n",
+        "  })\n",
+        "  \n",
+        "  # Remove the objects\n",
+        "  rm(list = all_objects[to_remove], envir = .GlobalEnv)\n",
+        "  \n",
+        "  # Return message about what was removed\n",
+        "  removed_count <- sum(to_remove)\n",
+        "  message(paste(\"Removed\", removed_count, \n",
+        "                ifelse(removed_count == 1, \"variable\", \"variables\"),\n",
+        "                \"of type\", type))\n",
+        "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 77,
       "id": "2c499ea1",
       "metadata": {
         "vscode": {
@@ -179,10 +210,68 @@
       "outputs": [],
       "source": [
         "NTFY_LINK <- \"https://ntfy.sh/lh-dm2025\"\n",
-        "\n",
         "notif <- function(mensaje){\n",
         "        system(sprintf('curl -d  \"%s -- %s\" %s', format(Sys.time(), \"%m-%d %H:%M\"), mensaje, NTFY_LINK)) \n",
+        "}\n",
+        "notif(\"Notifications activated\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 78,
+      "id": "7e74a1f5",
+      "metadata": {
+        "vscode": {
+          "languageId": "r"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "add_log = function(message){\n",
+        "    cat(message, file = paste0(getwd(), '/logs.txt'))\n",
         "}"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 84,
+      "id": "8a81543d",
+      "metadata": {
+        "vscode": {
+          "languageId": "r"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "error_handler = function(){\n",
+        "    add_log(\"Here we got an error\\n\")\n",
+        "    add_log(geterrmessage())\n",
+        "    notif(\"Dude, check the VM, something happeed.\")\n",
+        "}\n",
+        "options(error = error_handler)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 85,
+      "id": "af907144",
+      "metadata": {
+        "vscode": {
+          "languageId": "r"
+        }
+      },
+      "outputs": [
+        {
+          "ename": "ERROR",
+          "evalue": "Error in log(\"asd\"): non-numeric argument to mathematical function\n",
+          "output_type": "error",
+          "traceback": [
+            "Error in log(\"asd\"): non-numeric argument to mathematical function\nTraceback:\n"
+          ]
+        }
+      ],
+      "source": [
+        "log('asd')"
       ]
     },
     {
@@ -281,9 +370,10 @@
       "source": [
         "PARAM <- list()\n",
         "PARAM$semilla_primigenia <- 106109\n",
+        "PARAM$semillerio <- c(106109, 179099, 420691, 424243, 700001,100887, 200271, 333757, 567443, 875313)\n",
         "\n",
         "PARAM$experimento <- \"Z950_FE01\"\n",
-        "PARAM$experimento_desc <- 'Genetic Feature Engineering'\n",
+        "PARAM$experimento_desc <- 'Genetic Feature Engineering 01'\n",
         "PARAM$dataset <- \"analistasr_competencia_2025.csv.gz\""
       ]
     },
@@ -307,7 +397,17 @@
           "languageId": "r"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ERROR",
+          "evalue": "Error in setwd(\"/content/buckets/b1/exp\"): cannot change working directory\n",
+          "output_type": "error",
+          "traceback": [
+            "Error in setwd(\"/content/buckets/b1/exp\"): cannot change working directory\nTraceback:\n",
+            "1. .handleSimpleError(function (cnd) \n . {\n .     watcher$capture_plot_and_output()\n .     cnd <- sanitize_call(cnd)\n .     watcher$push(cnd)\n .     switch(on_error, continue = invokeRestart(\"eval_continue\"), \n .         stop = invokeRestart(\"eval_stop\"), error = NULL)\n . }, \"cannot change working directory\", base::quote(setwd(\"/content/buckets/b1/exp\")))"
+          ]
+        }
+      ],
       "source": [
         "# carpeta de trabajo\n",
         "\n",
@@ -552,6 +652,7 @@
         "  Corregir_atributo(\"matm_other\", c(202006), pmetodo) # 47\n",
         "\n",
         "  cat( \"fin Corregir_rotas()\\n\")\n",
+        "  add_log( \"fin Corregir_rotas()\\n\")\n",
         "}\n"
       ]
     },
@@ -805,7 +906,8 @@
         "campos_monetarios <- campos_monetarios[campos_monetarios %like%\n",
         "  \"^(m|Visa_m|Master_m|vm_m)\"]\n",
         "\n",
-        "campos_monetarios"
+        "campos_monetarios\n",
+        "add_log(campos_monetarios)"
       ]
     },
     {
@@ -919,6 +1021,7 @@
         "\n",
         "AgregarVariables_IntraMes <- function(dataset) {\n",
         "  cat( \"inicio AgregarVariables_IntraMes()\\n\")\n",
+        "  add_log( \"inicio AgregarVariables_IntraMes()\\n\")\n",
         "  gc(verbose= FALSE)\n",
         "  # INICIO de la seccion donde se deben hacer cambios con variables nuevas\n",
         "\n",
@@ -1152,6 +1255,11 @@
         "      \"ATENCION, hay\", infinitos_qty,\n",
         "      \"valores infinitos en tu dataset. Seran pasados a NA\\n\"\n",
         "    )\n",
+        "        add_log(paste0(\n",
+        "      \"ATENCION, hay \", infinitos_qty,\n",
+        "      \"valores infinitos en tu dataset. Seran pasados a NA\\n\")\n",
+        "    )\n",
+        "\n",
         "    dataset[mapply(is.infinite, dataset)] <<- NA\n",
         "  }\n",
         "\n",
@@ -1170,12 +1278,21 @@
         "      \"ATENCION, hay\", nans_qty,\n",
         "      \"valores NaN 0/0 en tu dataset. Seran pasados arbitrariamente a 0\\n\"\n",
         "    )\n",
+        "    \n",
+        "    add_log(\n",
+        "      paste0(\"ATENCION, hay\", nans_qty,\n",
+        "      \"valores NaN 0/0 en tu dataset. Seran pasados arbitrariamente a 0\\n\"\n",
+        "    ))\n",
         "\n",
         "    cat(\"Si no te gusta la decision, modifica a gusto el programa!\\n\\n\")\n",
+        "    add_log(\"Si no te gusta la decision, modifica a gusto el programa!\\n\\n\")\n",
+        "\n",
+        "\n",
         "    dataset[mapply(is.nan, dataset)] <<- 0\n",
         "  }\n",
         "\n",
         "  cat( \"fin AgregarVariables_IntraMes()\\n\")\n",
+        "  add_log( \"fin AgregarVariables_IntraMes()\\n\")\n",
         "}\n"
       ]
     },
@@ -1209,7 +1326,10 @@
       "source": [
         "# visualizo las columas del dataset a esta etapa\n",
         "ncol(dataset)\n",
-        "colnames(dataset)"
+        "colnames(dataset)\n",
+        "\n",
+        "add_log(ncol(dataset))\n",
+        "add_log(colnames(dataset))"
       ]
     },
     {
@@ -1554,8 +1674,13 @@
       },
       "outputs": [],
       "source": [
+        "add_log(\"Data Drifting done\")\n",
+        "\n",
         "ncol(dataset)\n",
-        "colnames(dataset)"
+        "colnames(dataset)\n",
+        "\n",
+        "add_log(ncol(dataset))\n",
+        "add_log(colnames(dataset))"
       ]
     },
     {
@@ -1626,6 +1751,7 @@
         "  )\n",
         "\n",
         "  cat( \"Fin construccion RandomForest\\n\" )\n",
+        "  add_log( \"Fin construccion RandomForest\\n\" )\n",
         "  # grabo el modelo, achivo .model\n",
         "  lgb.save(modelo, file=\"modelo.model\" )\n",
         "\n",
@@ -1771,8 +1897,12 @@
       },
       "outputs": [],
       "source": [
+        "# visualizo las columas del dataset a esta etapa\n",
         "ncol(dataset)\n",
-        "colnames(dataset)"
+        "colnames(dataset)\n",
+        "\n",
+        "log(ncol(dataset))\n",
+        "log(colnames(dataset))"
       ]
     },
     {
@@ -1876,6 +2006,7 @@
         "  canaritos_semilla) {\n",
         "\n",
         "  cat( \"inicio CanaritosAsesinos()\\n\")\n",
+        "  log( \"inicio CanaritosAsesinos()\\n\")\n",
         "  gc(verbose= FALSE)\n",
         "  dataset[, clase01 := 0L ]\n",
         "  dataset[ clase_ternaria %in% PARAM$CN$train$clase01_valor1,\n",
@@ -1980,6 +2111,7 @@
         "  dataset[, (col_inutiles) := NULL]\n",
         "\n",
         "  cat( \"fin CanaritosAsesinos()\\n\")\n",
+        "  log( \"fin CanaritosAsesinos()\\n\")\n",
         "\n",
         "  return( tb_importancia )\n",
         "}\n"
@@ -2067,7 +2199,10 @@
       "source": [
         "# verifico\n",
         "ncol(dataset)\n",
-        "colnames(dataset)"
+        "colnames(dataset)\n",
+        "\n",
+        "log(ncol(dataset))\n",
+        "log(colnames(dataset))"
       ]
     },
     {
@@ -2115,6 +2250,20 @@
         "   * testing = NO HAY\n",
         "   * validation =  202107   completo, sin undersampling\n",
         "   * training = [ 201901, 202105 ]  donde se consideran el 20% de los CONTINUA"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "1e12c975",
+      "metadata": {
+        "vscode": {
+          "languageId": "r"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "log(\"Inicio del modelado\\n\")"
       ]
     },
     {
@@ -2345,7 +2494,7 @@
       "outputs": [],
       "source": [
         "# 40 es el minimo razonable,  un buen analista Sr aumentara este valor\n",
-        "PARAM$hipeparametertuning$num_interations <- 40\n",
+        "PARAM$hipeparametertuning$num_interations <- 77\n",
         "\n",
         "# parametros fijos del LightGBM\n",
         "PARAM$lgbm$param_fijos <- list(\n",
@@ -2584,12 +2733,14 @@
       "outputs": [],
       "source": [
         "# inicio la optimizacion bayesiana\n",
-        "\n",
+        "log(\"INICIO DE BO\\n\")\n",
         "if (!file.exists(\"HT.RDATA\")) {\n",
         "  bayesiana_salida <- mbo(obj.fun, learner= surr.km, control= ctrl)\n",
         "} else {\n",
         "  bayesiana_salida <- mboContinue(\"HT.RDATA\") # retomo en caso que ya exista\n",
-        "}"
+        "}\n",
+        "log(\"FIN DE BO\\n\")\n",
+        "\n"
       ]
     },
     {
@@ -2634,7 +2785,8 @@
         "  list(learning_rate, feature_fraction, coverage, leaf_size)\n",
         "]\n",
         "\n",
-        "print(PARAM$out$lgbm$mejores_hiperparametros)"
+        "print(PARAM$out$lgbm$mejores_hiperparametros)\n",
+        "log(PARAM$out$lgbm$mejores_hiperparametros)"
       ]
     },
     {
@@ -2795,6 +2947,7 @@
       },
       "outputs": [],
       "source": [
+        "log('Inicio del training final')\n",
         "PARAM$FT$semillerio <- 20  # cantidad de semillas"
       ]
     },
@@ -3034,7 +3187,7 @@
       "source": [
         "# genero archivos con los  \"envios\" mejores\n",
         "# suba TODOS los archivos a Kaggle\n",
-        "\n",
+        "log(\"enviando a kaggle...\\n\")\n",
         "PARAM$kaggle$competencia <- \"data-mining-analista-sr-2025-a\"\n",
         "PARAM$kaggle$cortes <- seq(10000, 12000, by = 500)\n",
         "\n",
@@ -3070,9 +3223,14 @@
         "    \"'\" )\n",
         "\n",
         "  linea <- paste( comando, competencia, arch, mensaje)\n",
+        "  add_log(linea)\n",
         "\n",
         "  salida <- system(linea, intern=TRUE) # el submit a Kaggle\n",
         "  cat(salida, \"\\n\")\n",
+        "  add_log(salida)\n",
+        "\n",
+        "\n",
+        "\n",
         "}"
       ]
     },
@@ -3107,7 +3265,8 @@
       },
       "outputs": [],
       "source": [
-        "format(Sys.time(), \"%a %b %d %X %Y\")"
+        "format(Sys.time(), \"%a %b %d %X %Y\")\n",
+        "notif('FINISHED RUN')"
       ]
     }
   ],
